--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "vercel": "^32.3.1"
   },
   "devDependencies": {
     "daisyui": "^3.6.4"
