--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ MONGODB_PASS=vN3bvP6mQ364N1do
 
 
 NEXTAUTH_SECRET=abc
-NEXTAUTH_URL=https://hi-tech-psi.vercel.app/
+NEXTAUTH_URL=https://hi-tech-psi.vercel.app
 
 GITHUB_ID=087d1b60f488608ed38d
 
